--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/NuclearBoogaloo/Maps/Map001.Map001
+EditorStartupMap=/Game/NuclearBoogaloo/Maps/Map001.Map001
+GlobalDefaultGameMode=/Game/NuclearBoogaloo/GameModes/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
